--- a/wercker.yml
+++ b/wercker.yml
@@ -21,7 +21,5 @@ build:
     # Read more about steps on our dev center:
     # http://devcenter.wercker.com/docs/steps/index.html
     steps:
-        - bundle-install
-        - script:
-            name: test
-            code: bundle exec rake test
+        - bundle install
+        - bundle exec rake test
