--- a/wercker.yml
+++ b/wercker.yml
@@ -29,4 +29,4 @@ build:
                     apt-get install -y nodejs
         - script:
             name: Run Tests
-            code: bundle exec rake tests
+            code: bundle exec rake test
